# OTUS_5

./: CMakeLists.txt  README.md
.github/workflows/: release_ubuntu.yml
msvc/: OTUS_5.sln  homework_5.vcxproj  homework_5.vcxproj.filters
src/: MainWindow.cpp  MainWindow.h  circle.h  controller.cpp  controller.h  ishape.h  main.cpp  model.cpp  model.h  observer.h  square.h  stdafx.h
